--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 streamlit
 google-generativeai
 python-dotenv
+streamlit==1.35.0
+streamlit-webrtc==0.45.0
+openai-whisper
+numpy
+pandas
+av
+ffmpeg-python
